<resources>
    <string name="app_name">Acara 2 PGPB_M. Indra_21614</string>
    <string name="phone_title">My Phone</string>
    <string name="phone_name">Samsung Galaxy S22 5G</string>
    <string name="phone_price">$599.99</string>
    <string name="phone_description">Versions: SM-S901B, SM-S901B/DS (International);SM-S901U (USA); SM-S901U1 (USA unlocked); SM-S901W (Canada); SM-S901N (Korea); SM-S9010 (China); SM-S901E (Asia/Africa)</string>
    <string name="memory">256 GB | 8GB</string>
    <string name="camera">50 MP, f/1.8, 23mm (wide)</string>
    <string name="main_camera">MAIN CAMERA 50 MP, f/1.8, 23mm (wide), 1/1.56", 1.0µm, Dual Pixel PDAF, </string>
    <string name="selfi_camera">SELFIE CAMERA 	10 MP, f/2.2, 26mm (wide), 1/3.24", 1.22µm, Dual Pixel PDAF</string>
    <string name="baterai">Li-Ion 3700 mAh, non-removable</string>
    <string name="bookmark_btn_title">Bookmark</string>
</resources>