<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_title"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <ImageView
        android:id="@+id/image_phone"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/samsung"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/txt_phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/image_phone"
        />
    <TextView
        android:id="@+id/txt_phone_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_price"
        android:layout_marginTop="8sp"
        android:layout_below="@id/image_phone"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <TextView
        android:id="@+id/txt_phone_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_description"
        android:layout_marginTop="8sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txt_phone_name"
        />
    <TextView
        android:id="@+id/txt_phone_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory"
        android:layout_marginTop="8sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_below="@id/txt_phone_description"
        android:drawableStart="@drawable/baseline_phone_iphone_24"
        android:drawablePadding="5dp"
        />
    <TextView
        android:id="@+id/txt_phone_main_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_camera"
        android:layout_marginTop="8sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_below="@id/txt_phone_memory"
        android:drawableStart="@drawable/baseline_camera_24"
        android:drawablePadding="5dp"
        />
    <TextView
        android:id="@+id/txt_phone_selfie_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selfi_camera"
        android:layout_marginTop="8sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_below="@id/txt_phone_main_camera"
        android:drawableStart="@drawable/baseline_camera_front_24"
        android:drawablePadding="5dp"
        />
    <TextView
        android:id="@+id/txt_phone_baterai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baterai"
        android:layout_marginTop="8sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_below="@id/txt_phone_selfie_camera"
        android:drawableStart="@drawable/baseline_battery_charging_full_24"
        android:drawablePadding="5dp"
        />
    <Button
        android:id="@+id/bookmark_btn_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/baseline_book_24"
        android:text="@string/bookmark_btn_title"
        android:textColor="@color/black"
        android:backgroundTint="@color/gray"/>
</RelativeLayout>